WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
100607
[Qt][WK2] ASSERT hit for every mouse click
https://bugs.webkit.org/show_bug.cgi?id=100607
Summary
[Qt][WK2] ASSERT hit for every mouse click
Yael
Reported
2012-10-28 08:46:16 PDT
In an ASSERT enabled build, clicking the mouse anywhere in MiniBrowser triggers an ASSERT. This was introduced in the last few days. ASSERTION FAILED: !rect.intersects(next) /home/yael/webkit/ws1/Source/WebCore/page/GestureTapHighlighter.cpp(121) : void WebCore::{anonymous}::addHighlightRect(WebCore::Path&, const LayoutRect&, const LayoutRect&, const LayoutRect&) 1 0x7fc1fffe1a5f /home/yael/webkit/ws1/QtWebKitBuild/Debug/lib/../lib/libWebCore.so.1(+0x25b8a5f) [0x7fc1fffe1a5f] 2 0x7fc1fffe2408 /home/yael/webkit/ws1/QtWebKitBuild/Debug/lib/../lib/libWebCore.so.1(+0x25b9408) [0x7fc1fffe2408] 3 0x7fc1fffe252e /home/yael/webkit/ws1/QtWebKitBuild/Debug/lib/../lib/libWebCore.so.1(_ZN7WebCore21GestureTapHighlighter20pathForNodeHighlightEPKNS_4NodeE+0x8b) [0x7fc1fffe252e] 4 0x7fc203f47f3e /home/yael/webkit/ws1/QtWebKitBuild/Debug/lib/libWebKit2.so.1(_ZN6WebKit22TapHighlightController9highlightEPN7WebCore4NodeE+0x66) [0x7fc203f47f3e] 5 0x7fc203f5ec54 /home/yael/webkit/ws1/QtWebKitBuild/Debug/lib/libWebKit2.so.1(_ZN6WebKit7WebPage28highlightPotentialActivationERKN7WebCore8IntPointERKNS1_7IntSizeE+0x22a) [0x7fc203f5ec54]
Attachments
Patch
(3.32 KB, patch)
2012-11-02 04:23 PDT
,
Michael Brüning
no flags
Details
Formatted Diff
Diff
Patch
(4.41 KB, patch)
2012-11-02 07:12 PDT
,
Michael Brüning
jturcotte
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Michael Brüning
Comment 1
2012-11-01 08:33:44 PDT
Investigating.
Michael Brüning
Comment 2
2012-11-02 04:23:40 PDT
Created
attachment 172032
[details]
Patch
Michael Brüning
Comment 3
2012-11-02 07:12:45 PDT
Created
attachment 172053
[details]
Patch
Jocelyn Turcotte
Comment 4
2012-11-02 07:20:33 PDT
Comment on
attachment 172053
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=172053&action=review
> ChangeLog:12 > + * ManualTests/tap-gesture-on-em-link-tap-highlight-crash.html: Added.
r=me if you rename this file to ...highlight-assert.html instead of crash
Michael Brüning
Comment 5
2012-11-02 07:26:05 PDT
Committed
r133294
: <
http://trac.webkit.org/changeset/133294
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug