[Qt][WK2] ASSERT hit for every mouse click https://bugs.webkit.org/show_bug.cgi?id=100607

Reviewed by Jocelyn Turcotte.

.:

Added a test with a link that contains an <em> tag surrounding the entire inner text.
The test should be run on an assert enabled build and the assert should not be
triggered when tapping the link.

* ManualTests/tap-gesture-on-em-link-tap-highlight-assert.html: Added.

Source/WebCore:

Changed the logic of absolutePathForRenderer to use the first highlight box as the mid box
by uniting the two in case the mid box is empty. This allows the first box to be merged with
the last box should they intersect, and thereby prevents an ASSERT in addHighlightRect that is
triggered by two intersecting boxes being passed to addHighlightRect as separate ones.

Also, this patch removes some superfluous checks for LayoutRect::isEmpty, which is being checked
in LayoutRect::intersects already.

No new tests, but added manual test: ManualTests/tap-gesture-on-em-link-tap-highlight-assert.html

* page/GestureTapHighlighter.cpp:

Canonical link: https://commits.webkit.org/119148@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@133294 268f45cc-cd09-0410-ab3c-d52691b4dbfc